index.css
:root {
    --bg: #ccb55a;
    --fg: #314c73;
}

@font-face {
    font-family: 'Washington';
    src: url(font/WashingtonBoldDynamic.otf);
}

@font-face {
    font-family: 'Cinema';
    src: url(font/TBCinemaRGothic-M.ttf);
}

@font-face {
    font-family: 'Dodam';
    src: url(font/Typo_DodamM.ttf);
}

body {
    background: var(--bg);
}

a {
    color: skyblue;
    text-decoration: inherit;
    cursor: pointer;
}
a:hover {
    text-decoration: underline;
}

.flexbox {
    display: flex;
}
.flexbox > :last-child {
    flex: 1;
}

/* CARD PREVIEW */

#preview {
    position: relative;
    width: 395px;
    height: 504px;
    background: var(--bg);
    padding: 0;
    border-radius: 8px;
    margin: 8px 4px;
    overflow: hidden;
    -webkit-user-select: none;
    user-select: none;
}

#preview > * {
    position: absolute;
    pointer-events: none;
}

#card-back {
    top: 50px;
    left: 50px;
    width: 295px;
}

#art-under,
#art-over {
    position: absolute;
    top: 198px;
    left: 198px;
    width: 295px;
    transform: translate(-50%, -50%);
}

#card-top,
#card-element-left,
#card-element-center,
#card-element-right {
    top: 3px;
}

.bronze #card-top {
    left: 25px;
}
.silver #card-top {
    left: 24px;
}
.gold #card-top {
    left: 19px;
}
.diamond #card-top {
    left: 23px;
}

#card-element-icon {
    top: 15px;
    left: 37px;
    width: 56px;
}

#card-element-left,
#card-element-center,
#card-element-right {
    left: 25px;
}
#card-element-left {
    -webkit-clip-path: polygon(0 0, 80px 0, 80px 100%, 0 100%);
    clip-path: polygon(0 0, 80px 0, 80px 100%, 0 100%);
}
#card-element-center {
    transform: scaleX(70);
    transform-origin: 80px;
    -webkit-clip-path: polygon(80px 0, 81px 0, 81px 100%, 80px 100%);
    clip-path: polygon(80px 0, 81px 0, 81px 100%, 80px 100%);
}
#card-element-right {
    left: 94px;
    -webkit-clip-path: polygon(81px 0, 100% 0, 100% 100%, 81px 100%);
    clip-path: polygon(81px 0, 100% 0, 100% 100%, 81px 100%);
}

.gold #card-element-left,
.gold #card-element-center,
.gold #card-element-right {
    left: 18px;
}
.gold #card-element-left {
    -webkit-clip-path: polygon(0 0, 87px 0, 87px 100%, 0 100%);
    clip-path: polygon(0 0, 87px 0, 87px 100%, 0 100%);
}
.gold #card-element-center {
    transform-origin: 87px;
    -webkit-clip-path: polygon(87px 0, 88px 0, 88px 100%, 87px 100%);
    clip-path: polygon(87px 0, 88px 0, 88px 100%, 87px 100%);
}
.gold #card-element-right {
    left: 87px;
    -webkit-clip-path: polygon(88px 0, 100% 0, 100% 100%, 88px 100%);
    clip-path: polygon(88px 0, 100% 0, 100% 100%, 88px 100%);
}

.diamond #card-element-left,
.diamond #card-element-center,
.diamond #card-element-right {
    top: 2px;
    left: 24px;
}
.diamond #card-element-right {
    left: 93px;
}

.bronze #card-level {
    top: 4px;
    left: 295px;
    width: 64px;
}
.silver #card-level,
.gold #card-level {
    top: 5px;
    left: 296px;
    width: 62px;
}
.diamond #card-level {
    top: 3px;
    left: 295px;
    width: 64px;
}

#card-bottom {
    bottom: 3px;
}
.bronze #card-bottom {
    left: 17px;
}
.silver #card-bottom {
    left: 17px;
}
.gold #card-bottom {
    left: 18px;
}
.diamond #card-bottom {
    left: 23px;
}

#card-energy {
    bottom: 11px;
    left: 50px;
    width: 295px;
    text-align: center;
}

#card-energy > img {
    width: 20.5px;
    margin: 0 2px;
}

#preview > input[type='text'] {
    background: none;
    color: white;
    font-family: 'Washington', 'Cinema', 'Dodam';
    text-align: center;
    text-transform: uppercase;
    text-shadow: 0.07em 0.07em black;
    padding: 0;
    border: none;
    border-radius: 0;
    margin: 0;
    pointer-events: auto;
}
#card-element-text,
#card-level-text {
    font-size: 31px;
    line-height: 60px;
}
#preview #card-element-text {
    top: 10px;
    left: 109px;
    width: 150px;
    text-align: left;
}
#card-level-text {
    top: 6px;
    left: 297px;
    width: 60px;
}

#card-variant,
#card-fighter {
    width: 100%;
}
#card-variant {
    left: 30px;
    bottom: 89px;
    width: 335px;
    line-height: 60px;
    font-size: 58px;
}
#card-fighter {
    left: 50px;
    bottom: 51px;
    width: 295px;
    line-height: 40px;
    font-size: 38px;
}

/* CARD ART TOOLS */

.editing-art * {
    pointer-events: none;
    -webkit-user-select: none;
    user-select: none;
}
.editing-art #card-art-position-tool {
    pointer-events: auto;
}

#card-art-position-tool {
    top: 50px;
    left: 50px;
    width: 295px;
    height: 295px;
    cursor: move;
    pointer-events: auto;
}
#card-art-position-tool:hover {
    outline: 3px dashed white;
}

#circle {
    position: absolute;
    width: 3px;
    height: 3px;
    transform: translate(-50%, -50%);
    border: 3px dashed white;
    border-radius: 50%;
    display: none;
    pointer-events: none;
}
.editing-art #circle {
    display: block;
}

#card-art-mask-tool {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    cursor: not-allowed;
    pointer-events: auto;
}

#mask-top,
#mask-left,
#mask-right,
#mask-bottom {
    box-sizing: border-box;
    position: absolute;
}
#mask-top:hover,
#mask-left:hover,
#mask-right:hover,
#mask-bottom:hover {
    border: 3px dashed red;
}
#mask-top.active,
#mask-left.active,
#mask-right.active,
#mask-bottom.active {
    background: var(--fg);
}
#mask-top {
    width: 100%;
    height: 50px;
}
#mask-left {
    width: 50px;
    height: 100%;
}
#mask-right {
    right: 0;
    width: 50px;
    height: 100%;
}
#mask-bottom {
    bottom: 0;
    width: 100%;
    height: 159px;
}

/* MENU */

#menu {
    position: relative;
    min-height: 609px;
    width: max-content;
    background: var(--fg);
    color: white;
    padding: 8px;
    border: 3px double var(--bg);
    border-radius: 16px;
    margin: auto;
}

#kofi img {
    position: absolute;
    right: 0;
    top: 0;
    width: 24px;
    margin: 6px;
    display: block;
}

h1, h2, h3, label {
    font-family: 'Cinema';
    text-transform: uppercase;
    text-shadow: 0.1em 0.1em black;
    letter-spacing: 0.1em;
    margin: 4px;
}

h1 {
    text-align: center;
}
h3 {
    color: var(--bg);
}

.disabled {
    opacity: 0.5;
    pointer-events: none;
}

/* MENU INPUTS */

input[type='radio'] + label,
input[type='file'],
input[type='text'],
input[type='number'],
input[type='button'] {
    background: var(--bg);
    color: var(--fg);
    padding: 8px;
    border: 3px double var(--fg);
    border-radius: 8px;
    outline: none;
    margin: 4px;
}

input[type='radio'] + label:hover,
input[type='file']:hover,
input[type='text']:hover,
input[type='number']:hover,
input[type='button']:hover {
    color: white;
    border-color: white;
}

input[type='radio']:checked + label,
input[type='file']:focus,
input[type='text']:focus,
input[type='number']:focus,
input[type='button'] {
    background: var(--fg);
    color: var(--bg);
    border-color: var(--bg);
}

input[type='radio'] {
    display: none;
}

input[type='radio'] + label {
    height: 32px;
    min-width: 32px;
    background: var(--fg);
    border-color: var(--bg);
    text-align: center;
    vertical-align: top;
    display: inline-block;
    cursor: pointer;
}
input[type='radio']:checked + label {
    background: var(--bg);
    border-color: var(--fg);
}

input[type='radio'] + label img {
    max-height: 32px;
    max-width: 32px;
}

input[type='file'],
input[type='text'],
input[type='number'],
input[type='button'] {
    font-family: 'Cinema';
    font-size: 18px;
    text-transform: uppercase;
}

input[type='file'],
input[type='text'] {
    width: 90%;
    width: calc(100% - 30px);
}

input[type='number'] {
    width: 3em;
}

input[type='button'] {
    width: 33%;
    margin: 8px auto;
    display: block;
    cursor: pointer;
}

#fg-preview, #bg-preview {
    padding: 8px;
    border-radius: 4px;
    margin: 4px;
}

/* SPECIAL MENU BUTTONS */

#option-move + label:hover > img {
    animation: 1s circuit linear infinite;
    transform-origin: 10px 10px;
}

#option-scale + label > img:first-child {
    transform: rotateY(180deg);
}
#option-scale + label:hover > img:first-child {
    animation: 0.5s wiggle-left linear alternate infinite;
}
#option-scale + label:hover > img:last-child {
    animation: 0.5s wiggle-right linear alternate infinite;
}

#option-rotate + label > img {
    transform: rotate(180deg);
}
#option-rotate + label:hover > img {
    animation: 2s spin linear infinite;
}

@keyframes circuit {
    0%   {transform: translate(-3px, -3px);}
    25%  {transform: translate( 7px, -3px);}
    50%  {transform: translate( 7px,  7px);}
    75%  {transform: translate(-3px,  7px);}
    100% {transform: translate(-3px, -3px);}
}
@keyframes wiggle-left {
    0%   {transform: rotateY(180deg) rotateZ(-10deg);}
    100% {transform: rotateY(180deg) rotateZ( 20deg);}
}
@keyframes wiggle-right {
    0%   {transform: rotateZ(-10deg);}
    100% {transform: rotateZ( 20deg);}
}
@keyframes spin {
    0%   {transform: rotateZ(   0deg);}
    100% {transform: rotateZ(-360deg);}
}

/* RENDERED CARD */

#render-image {
    text-align: center;
}

#render-image > img {
    width: 200px;
    border: 1px dashed var(--bg);
    border-radius: 4px;
    /* cursor: pointer; */
}

#render-disclaimer {
    font-family: sans-serif;
    text-align: center;
}

.hidden {
    display: none;
}

.pre-jsgif, .jsgif {
    text-align: center;
}

.jsgif:after {
    content: 'LOADING...';
    font-family: "Washington";
    display: block;
}

